add swagger generation
