# docs/swagger.json
@@ -58,7 +58,7 @@
         },
         "/python": {
             "post": {
-                "description": "Generate python",
+                "description": "Parse swagger to doc and python",
                 "consumes": [
                     "text/plain"
                 ],
@@ -68,8 +68,15 @@
                 "tags": [
                     "service"
                 ],
-                "summary": "Generate python",
+                "summary": "Parse swagger to doc and python",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Provider name",
+                        "name": "provider",
+                        "in": "query",
+                        "required": true
+                    },
                     {
                         "description": "Input text data",
                         "name": "data",
